minor edits to footer

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div id="mainDiv" class="container-fluid">
         <div class="row">
-            <div class="col-12">
+            <div id ="mainCol" class="col-12">
                 <header id="header">
               <!--NavBar-->
                 <nav id = "nav-bar" class="navbar navbar-expand-md navbar-light">
-                    <img id = "header-img" src="deskLogo.PNG" alt="deskLogo" width="50" height="35">
+                    <img id = "header-img" class="margin10" src="deskLogo.PNG" alt="deskLogo" width="50" height="35">
                     <a id = "navBrand" class="navbar-brand" href="#">Premium Desks</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav1">
+                    <button class="navbar-toggler margin10" type="button" data-toggle="collapse" data-target="#navbarNav1">
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse justify-content-center" id="navbarNav1">
@@ -110,11 +110,11 @@
                     <!--Footer-->
                      <div id="footerDiv">
                      <div id="links" class="d-flex justify-content-end">
-                        <p class="margin5"><b>Privacy</b></p>
-                        <p class="margin5"><b>Terms</b></p>
-                        <p class="margin5"><b>Contact</b></p>     
+                        <p class="margin10"><b>Privacy</b></p>
+                        <p class="margin10"><b>Terms</b></p>
+                        <p class="margin10"><b>Contact</b></p>     
                     </div>
-                    <div id="copyRight" class="d-flex justify-content-end margin5">
+                    <div id="copyRight" class="d-flex justify-content-end margin10">
                     <p >Copyright 2021, Premium Desks</p>
                 </div>
             </div>
